--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,7 +1,4 @@
 // Typography
-$family-serif: 'Roboto Slab', serif;
-$family-sans-serif: 'Roboto', sans-serif;
-$family-primary: $family-sans-serif;
 $letter-spacing: 0.04em;
 
 // Colors
@@ -11,10 +8,11 @@ $primary: #2998FF;
 $radius: 2px;
 
 // Sidebar
-$sidebar-background: $primary;
+$sidebar-background: #fff;
 $sidebar-width: 30%;
 $sidebar-color: darken($primary, 25%);
 $sidebar-padding: 20px;
 
 // Panel
-$panel-header-background: darken($primary, 15%);
+$panel-header-background: #fff;
+$panel-header-color: $grey;
