Education Info Tab

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -3,6 +3,8 @@ $family-serif: 'Roboto Slab', serif;
 $family-sans-serif: 'Roboto', sans-serif;
 $family-primary: $family-sans-serif;
 
+$primary: #2998FF;
+
 // Bulma
 @import "../node_modules/bulma/bulma";
 
