--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -9,3 +9,14 @@ html, body {
 .hidden {
     display: none;
 }
+
+.icon-small {
+    font-size: 1em;
+}
+
+.button {
+    .icon {
+        display: inline-block;
+        margin-right: 0.5em !important;
+    }
+}
