--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -6,7 +6,7 @@ $radius: 2px;
 
 // Sidebar
 $sidebar-background: #fff;
-$sidebar-width: 30%;
+$sidebar-width: 450px;
 $sidebar-color: darken($primary, 25%);
 $sidebar-padding: 20px;
 
