--- a/src/scss/sidebar.scss
+++ b/src/scss/sidebar.scss
@@ -12,24 +12,42 @@
 
     .logo-wrapper {
         background: $primary;
-        padding: $sidebar-padding;
+
+        .button {
+            float: right;
+            margin: ($sidebar-padding/2) + 2;
+            color: $grey;
+            border: none;
+            border-radius: $radius;
+            transition: all 0.3s ease-in-out;
+            padding-right: 30px;
+            padding-left: 30px;
+            box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.15);
+
+            &:hover {
+                color: $grey-dark;
+                box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.15);
+                transform: scale(1.02);
+            }
+        }
     }
 
     .logo {
-        text-align: center;
-        font-family: $family-serif;
-        display: block;
+        // text-align: center;
+        // font-family: $family-serif;
+        display: inline-block;
+        padding: $sidebar-padding;
 
         img {
-            width: 40px;
-            vertical-align: baseline;
+            width: 20px;
+            vertical-align: middle;
         }
 
-        span {
-            color: $white;
-            font-size: 2.6em;
-            vertical-align: baseline;
-            margin-left: 5px;
-        }
+        // span {
+        //     color: $white;
+        //     font-size: 1.8em;
+        //     vertical-align: baseline;
+        //     margin-left: 5px;
+        // }
     }
 }
