--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -1,7 +1,8 @@
 html, body {
     font-size: 12px;
     height: 100%;
-    overflow: auto;
+    overflow-y: auto;
+    overflow-x: hidden;
     letter-spacing: $letter-spacing;
     background: #f0f3f7;
 }
@@ -15,8 +16,23 @@ html, body {
 }
 
 .button {
+    height: auto;
+    border: none;
+    border-radius: $radius;
+    transition: all 0.3s ease-in-out;
+    box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.15);
+
+    &:hover {
+        box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.15);
+        transform: scale(1.02);
+    }
+
     .icon {
         display: inline-block;
         margin-right: 0.5em !important;
     }
+}
+
+#app {
+    height: 100%;
 }
