--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -17,6 +17,7 @@ html, body {
 
 .button {
     height: auto;
+    padding: 6px 18px;
     border: none;
     border-radius: $radius;
     transition: all 0.3s ease-in-out;
