--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,6 +1,8 @@
 // Typography
 $letter-spacing: 0.04em;
 
+$primary: #2998FF;
+$grey: #7a7a7a;
 // Misc
 $radius: 2px;
 
@@ -13,3 +15,6 @@ $sidebar-padding: 20px;
 // Panel
 $panel-header-background: #fff;
 $panel-header-color: $grey;
+
+// Navbar
+$navbar-height: 58px;
