--- a/src/scss/navbar.scss
+++ b/src/scss/navbar.scss
@@ -1,41 +1,66 @@
 .navbar {
-    background: $primary;
-    position: fixed;
-    top: 0;
-    min-height: $navbar-height;
-    left: 0;
-    right: 0;
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.25);
-    z-index: 10;
+  background: $primary;
+  text-align: center;
+  position: fixed;
+  top: 0;
+  min-height: $navbar-height;
+  left: 0;
+  right: 0;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25);
+  z-index: 10;
 
-    .button {
-        float: right;
-        margin: ($sidebar-padding/2) + 2;
-        color: $grey;
-        padding-right: 30px;
-        padding-left: 30px;
+  .generate-button {
+    float: right;
+    margin: ($sidebar-padding/2) + 2;
+    color: $grey;
+    padding-right: 30px;
+    padding-left: 30px;
 
-        &:hover {
-            color: $grey-dark;
-        }
+    &:hover {
+      color: $grey-dark;
+    }
+  }
+
+  .logo {
+    display: inline-block;
+    padding: $sidebar-padding;
+
+    img {
+      width: 20px;
+      vertical-align: middle;
+    }
+  }
+
+  .account-tab {
+    float: left;
+    padding-top: 9px;
+    color: $white;
+    font-size: 1.2em;
+    text-transform: uppercase;
+    padding: 18px;
+    cursor: pointer;
+    position: relative;
+
+    .icon {
+      font-size: 0.8em;
     }
 
-    .logo {
-        // text-align: center;
-        // font-family: $family-serif;
-        display: inline-block;
-        padding: $sidebar-padding;
+    .account-dropdown {
+      position: absolute;
+      top: 100%;
+      left: 10%;
+      margin-top: 1px;
+      background: $white;
+      border-radius: 0 0 $radius $radius;
+      min-width: 200px;
+      z-index: 12;
+      box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.15), -1px 0px 4px rgba(0, 0, 0, 0.15);
 
-        img {
-            width: 20px;
-            vertical-align: middle;
-        }
-
-        // span {
-        //     color: $white;
-        //     font-size: 1.8em;
-        //     vertical-align: baseline;
-        //     margin-left: 5px;
-        // }
+      a {
+          font-size: 0.9em;
+          display: block;
+          padding: 10px;
+      }
     }
+  }
 }
