--- a/src/scss/navbar.scss
+++ b/src/scss/navbar.scss
@@ -19,10 +19,18 @@
     &:hover {
       color: $grey-dark;
     }
+
+    .button-icon {
+      display: inline-block;
+    }
+
+    .button-text {
+      display: none;
+    }
   }
 
   .logo {
-    display: inline-block;
+    display: none;
     padding: $sidebar-padding;
 
     img {
@@ -65,7 +73,8 @@
       z-index: 12;
       box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.15), -1px 0 4px rgba(0, 0, 0, 0.15);
 
-      span, a {
+      a,
+      span {
         font-size: 0.9em;
         display: block;
         padding: 10px 20px;
@@ -74,8 +83,26 @@
       }
 
       span {
-          cursor: default;
-          color: $grey-light;
+        cursor: default;
+        color: $grey-light;
+      }
+    }
+  }
+}
+
+@media only screen and (min-device-width : 700px) {
+  .navbar {
+    .logo {
+      display: inline-block;
+    }
+
+    .generate-button {
+      .button-text {
+        display: block;
+      }
+
+      .button-icon {
+        display: none;
       }
     }
   }
