--- a/src/scss/sidebar.scss
+++ b/src/scss/sidebar.scss
@@ -4,9 +4,15 @@
     left: 0;
     top: $navbar-height;
     bottom: 0;
-    max-width: $sidebar-width;
+    max-width: 100%;
     width: 100%;
     color: $sidebar-color;
     overflow-y: auto;
-    box-shadow: 5px 0 10px rgba(0,0,0,0.05);    
+    box-shadow: 5px 0 10px rgba(0,0,0,0.05);
+}
+
+@media only screen and (min-device-width : 1000px) {
+    .sidebar {
+        max-width: $sidebar-width;
+    }
 }
