--- a/src/scss/sidebar.scss
+++ b/src/scss/sidebar.scss
@@ -1,18 +1,36 @@
 .sidebar {
-    background: $sidebar-background;
-    position: fixed;
-    left: 0;
-    top: $navbar-height;
-    bottom: 0;
-    max-width: 100%;
-    width: 100%;
-    color: $sidebar-color;
-    overflow-y: auto;
-    box-shadow: 5px 0 10px rgba(0,0,0,0.05);
-}
+  background: $sidebar-background;
+  position: fixed;
+  left: 0;
+  top: $navbar-height;
+  bottom: 38px;
+  max-width: 100%;
+  width: 100%;
+  color: $sidebar-color;
+  overflow-y: auto;
+  box-shadow: 5px 0 10px rgba(0,0,0,0.05);
 
-@media only screen and (min-device-width : 1000px) {
-    .sidebar {
-        max-width: $sidebar-width;
+  .sidebar-footer {
+    display: block;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: $sidebar-width;
+    background: #fff;
+    border-top: solid 1px darken($white-ter, 5%);
+    text-align: center;
+    padding: 10px;
+    text-transform: uppercase;
+    cursor: pointer;
+    color: $grey;
+
+    &:hover {
+        background: $white-ter;
     }
+  }
+}
+@media only screen and (min-device-width : 1000px) {
+  .sidebar {
+    max-width: $sidebar-width;
+  }
 }
