--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -1,56 +1,68 @@
-html, body {
-    font-size: 12px;
-    height: 100%;
-    overflow-y: auto;
-    overflow-x: hidden;
-    letter-spacing: $letter-spacing;
-    background: #f0f3f7;
+body,
+html {
+  font-size: 12px;
+  height: 100%;
+  overflow-y: auto;
+  overflow-x: hidden;
+  letter-spacing: $letter-spacing;
+  background: #f0f3f7;
 }
 
 .hidden {
-    display: none;
+  display: none;
 }
 
 .icon-small {
-    font-size: 1em;
+  font-size: 1em;
 }
 
 .button {
-    height: auto;
-    padding: 6px 18px;
-    border: none;
-    border-radius: $radius;
-    transition: all 0.3s ease-in-out;
-    box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.15);
+  height: auto;
+  padding: 6px 18px;
+  border: none;
+  border-radius: $radius;
+  transition: all 0.3s ease-in-out;
+  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.15);
 
-    &:hover {
-        box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.15);
-        transform: scale(1.02);
-    }
+  &:hover {
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.15);
+    transform: scale(1.02);
+  }
 
-    .icon {
-        display: inline-block;
-        margin-right: 0.5em !important;
-    }
+  .icon {
+    display: inline-block;
+    margin-right: 0.5em !important;
+  }
 }
 
 #app {
-    height: 100%;
+  height: 100%;
 }
 
-.error {
-    display: block;
-    background: #fff;
-    border: solid 2px $red;
-    border-radius: 2px;
+.notification {
+  display: block;
+  background: #fff;
+  border: solid 2px $grey-light;
+  border-radius: 3px;
+  color: $grey;
+  padding: 30px 40px;
+  text-align: center;
+  position: fixed;
+  top: 40%;
+  left: 50%;
+  max-width: 400px;
+  width: 100%;
+  margin-left: -200px;
+  font-size: 1.2em;
+  box-shadow: 5px 5px 10px rgba(0,0,0,0.1), -5px -5px 10px rgba(0,0,0,0.1);
+
+  &.error-notification {
+    border-color: $red;
     color: $red;
-    padding: 20px;
-    text-align: center;
-    position: fixed;
-    top: 40%;
-    left: 50%;
-    max-width: 300px;
-    width: 100%;
-    margin-left: -150px;
-    box-shadow: 5px 5px 10px rgba(0,0,0,0.1), -5px -5px 10px rgba(0,0,0,0.1);
+  }
+
+  &.success-notification {
+    border-color: $primary;
+    color: $primary;
+  }
 }
